KarRefinemnt v1.0-compability分支，兼容1.12-1.20.1